// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/CustomSelectSearchInput should render search input ui 1`] = `
<div>
  <span
    class="ant-input-affix-wrapper basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless css-dev-only-do-not-override-ywkr0o"
  >
    <input
      class="ant-input ant-input-borderless css-dev-only-do-not-override-ywkr0o"
      placeholder="搜索"
      type="text"
      value="test-value"
    />
    <span
      class="ant-input-suffix"
    >
      <span
        class="ant-input-clear-icon"
        role="button"
        tabindex="-1"
      >
        <span
          class="custom-icon custom-icon-close css-u3jcp4"
          role="img"
        >
          <svg
            fill="currentColor"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
            />
          </svg>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`lib/CustomSelectSearchInput should render search value change 1`] = `
<div>
  <span
    class="ant-input-affix-wrapper basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless css-dev-only-do-not-override-ywkr0o"
  >
    <input
      class="ant-input ant-input-borderless css-dev-only-do-not-override-ywkr0o"
      placeholder="搜索"
      type="text"
      value="test-value-change"
    />
    <span
      class="ant-input-suffix"
    >
      <span
        class="ant-input-clear-icon"
        role="button"
        tabindex="-1"
      >
        <span
          class="custom-icon custom-icon-close css-u3jcp4"
          role="img"
        >
          <svg
            fill="currentColor"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
            />
          </svg>
        </span>
      </span>
    </span>
  </span>
</div>
`;
